Mon Aug 21 16:11:16 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* sanity.sh (basic1): Make sure first-dir is deleted before
	running this set of tests.

Mon Aug 21 12:54:14 1995  Rick Sladkey  <jrs@world.std.com>

	* update.c (update_filesdone_proc): If pipeout, don't try to
	create CVS/Root.

Mon Aug 21 12:54:14 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_rsh_server): Don't pass -d to "cvs server"
	invocation via rsh.

	* server.c (serve_root): Report errors via pending_error_text.
	(serve_valid_requests): Check for pending errors.

Sun Aug 20 00:59:46 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Document usage of DIFF in update.c
	* update.c: Use DIFF -c, not DIFF -u.  The small improvement in
	diff size is not worth the hassle in terms of everyone having to
	make sure that DIFF is GNU diff (IMHO).

Sat Aug 19 22:05:46 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* recurse.c (start_recursion): Doc fix.

	* server.c (do_cvs_command): Clear error_use_protocol in the
	child.
	(server): Set error_use_protocol.

Sun Aug 13 15:33:37 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (do_cvs_command): Don't select on exceptions.

Fri Aug  4 00:13:47 1995  Jim Meyering  (meyering@comco.com)

	* Makefile.in (LDFLAGS): Set to @LDFLAGS@.
	(options.h): Depend on ../config.status and options.h.in.
	Add rule to build it from dependents.

	* add.c: Include save-cwd.h.
	(add_directory): Use save_cwd and restore_cwd instead of
	explicit getwd then chdir.
	* import.c (import_descend_dir): Likewise.
	* modules.c (do_module): Likewise.

	* recurse.c (save_cwd, restore_cwd, free_cwd): Remove functions.
	New versions have been broken out into save-cwd.c.
	(do_dir_proc): Adapt to handle status code returned by new versions
	of save_cwd and restore_cwd -- and one fewer argument to restore_cwd.
	(unroll_files_proc): Likewise.

	* wrapper.c (wrap_name_has): Add default: abort () to switch
	statement to avoid warning from gcc -Wall.